--- a/front-end/templates/pages/index.html
+++ b/front-end/templates/pages/index.html
@@ -20,6 +20,7 @@
                 <div class="col-md-4 mb-3">
                   <label class="sr-only">Keywords</label>
                   <input type="text" name="keywords" class="form-control" placeholder="Keyword (Name, Food, etc)">
+                  <p>sample</p>
                 </div>
 
                 <div class="col-md-4 mb-3">
